--- a/EventApplication/Web.config
+++ b/EventApplication/Web.config
@@ -13,6 +13,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-EventApplication-20181128045912.mdf;Initial Catalog=aspnet-EventApplication-20181128045912;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="EventApplicationDbContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=EventApplicationDbContext-20181208203237; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|EventApplicationDbContext-20181208203237.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
